--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mysten/sui": "^1.28.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@suiet/wallet-kit": "^0.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.494.0",
