--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mysten/sui": "^1.28.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.10",
     "@radix-ui/react-slot": "^1.2.0",
     "@suiet/wallet-kit": "^0.3.4",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
