--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.16",
     "@mysten/sui": "^1.28.0",
+    "@mysten/sui.js": "^0.54.1",
     "@radix-ui/react-dropdown-menu": "^2.1.10",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-radio-group": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@suiet/wallet-kit": "^0.3.4",
+    "ai": "^4.3.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.5",
     "lucide-react": "^0.494.0",
     "next": "14.2.18",
     "react": "^18",
