--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-dom": "^18",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "framer-motion": "^10.16.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
