--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "@ai-sdk/openai": "^1.3.16",
     "@mysten/sui": "^1.28.0",
     "@mysten/sui.js": "^0.54.1",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.10",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-radio-group": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.7",
     "@suiet/wallet-kit": "^0.3.4",
     "ai": "^4.3.9",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
@@ -32,6 +40,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
