--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.16",
+    "@google/generative-ai": "^0.24.0",
+    "@mysten/dapp-kit": "^0.15.6",
     "@mysten/sui": "^1.28.0",
     "@mysten/sui.js": "^0.54.1",
     "@radix-ui/react-dialog": "^1.1.10",
@@ -25,6 +27,7 @@
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.7",
     "@suiet/wallet-kit": "^0.3.4",
+    "@tanstack/react-query": "^5.74.4",
     "ai": "^4.3.9",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +36,7 @@
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.494.0",
     "next": "14.2.18",
+    "openai": "^4.95.1",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.15.3",
