--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mysten/dapp-kit": "^0.15.6",
     "@mysten/sui": "^1.28.0",
     "@mysten/sui.js": "^0.54.1",
+    "@mysten/wallet-kit": "^0.8.6",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.10",
     "@radix-ui/react-label": "^2.1.4",
