Made the changes

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-TEST_PRIVATE_KEY="AFDLx/fuqv6Wjr9PsRrYXlLPJLx5MMVkYmZLuIHvH216"
-GEMINI_API_KEY="AIzaSyC_KIZwz4W1uSHxT2Sf-vUFjSbKvgHV3UY"
+GEMINI_API_KEY=
+
+
+
+
